--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -19,6 +18,7 @@
             <button class="botao">Atualizar meu currículo</button>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
