--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+            </div>
+            <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+            </div>
+            <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+            </div>
+            <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+            </div>
+        </div>
+         
+
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
