--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+       <div class="conteudo">
         <div class="botoes">
             <button class="botao ativo">Cursos na Alura</button>
             <button class="botao">Criar projetos em Javascript</button>
@@ -18,29 +17,24 @@
             <button class="botao">Atualizar meu currículo</button>
         </div>
         <div class="abas-textos">
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
-            <div class="abas-textos">
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript </h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
-            <div class="abas-textos">
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+                <h3 class="aba-conteudo-titulo-principal">Crir um portfolio com os meus 3 melhores projetos</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
-            <div class="abas-textos">
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-texto-principal">estudar 4 cursos na alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">tempo para completar os cursos</h4>
+                <h3 class="aba-conteudo-titulo-principal">Atualizar meus curriculos com os certificados da Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
         </div>
-         
-
-        </div>
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
